meBS7Xgo created auth as a service, login end point with jwt finished,  register endpoint first steps, swagger doc tags
