# backend-gymWeb/src/controllers/login.controller.ts
@@ -1,4 +1,4 @@
-import { Action, ApiController, ConfigurationBuilder, Controller } from "@miracledevs/paradigm-express-webapi";
+import { Action, ApiController, ConfigurationBuilder, Controller, HttpMethod } from "@miracledevs/paradigm-express-webapi";
 import { MySqlConnection } from "../core/mysql/mysql.connection";
 import { User } from "../models/user";
 import { error } from "console";
@@ -7,26 +7,47 @@ import { AuthUser } from "./auth.user";
 import { Configuration } from "../configuration/configuration";
 import jwt from "jsonwebtoken";
 import { Tags } from "typescript-rest-swagger";
+import { UserRepository } from "../repositories/user.repository";
+import bcrypt from "bcrypt";
+import { AuthService } from "../services/auth.service";
 
-@Tags("User login")
-@Path("/api/login")
-@Controller({ route: "/api/login" })
+@Tags("Auth")
+@Path("/api/auth")
+@Controller({ route: "/api/auth" })
 export class LoginController extends ApiController {
     config: Configuration;
-    constructor(config: ConfigurationBuilder) {
+    salt: string;
+    constructor(config: ConfigurationBuilder, private repo: UserRepository, private auth: AuthService) {
         super();
         this.config = config.build(Configuration);
     }
 
     @POST
-    @Action({ route: "/", fromBody: true })
-    post(authUser: AuthUser): string {
+    @Path("/login")
+    @Action({ route: "/login", fromBody: true })
+    async post(authUser: AuthUser): Promise<string> {
         try {
-            //voy a la base de datos
-            if (authUser.username === "admin" && authUser.password === "admin") {
-                return jwt.sign({ user: "admin" }, this.config.jwtSecret);
+            const valid = await this.auth.validateUser(authUser);
+            if (valid) {
+                return jwt.sign({ user: authUser.username }, this.config.jwtSecret);
             }
             this.httpContext.response.sendStatus(401);
+        } catch {
+            this.httpContext.response.sendStatus(500);
+
+            return;
+        }
+    }
+
+    @POST
+    @Path("/register")
+    @Action({ route: "/register", fromBody: true, method: HttpMethod.POST })
+    async register(user: User): Promise<string> {
+        try {
+            //falta lógica de validación de campos requeridos //
+            // que se llamaría desde services -> auth.services.ts //
+            this.auth.registerUser(user);
+            this.httpContext.response.sendStatus(201);
         } catch {
             this.httpContext.response.sendStatus(500);
 
