# backend-gymWeb/src/docs/swagger.yaml
@@ -13,54 +13,6 @@ definitions:
         required:
             - username
             - password
-    IUser:
-        description: ""
-        properties:
-            id:
-                type: number
-                format: double
-                description: ""
-            name:
-                type: string
-                description: ""
-            lastname:
-                type: string
-                description: ""
-            dni:
-                type: number
-                format: double
-                description: ""
-            dateofbirth:
-                type: string
-                description: ""
-            phone:
-                type: string
-                description: ""
-            email:
-                type: string
-                description: ""
-            address:
-                type: string
-                description: ""
-            city:
-                type: string
-                description: ""
-            state:
-                type: number
-                format: double
-                description: ""
-        type: object
-        required:
-            - id
-            - name
-            - lastname
-            - dni
-            - dateofbirth
-            - phone
-            - email
-            - address
-            - city
-            - state
     User:
         description: ""
         properties:
@@ -97,6 +49,12 @@ definitions:
                 type: number
                 format: double
                 description: ""
+            username:
+                type: string
+                description: ""
+            password:
+                type: string
+                description: ""
         type: object
         required:
             - id
@@ -109,6 +67,64 @@ definitions:
             - address
             - city
             - state
+            - username
+            - password
+    IUser:
+        description: ""
+        properties:
+            id:
+                type: number
+                format: double
+                description: ""
+            name:
+                type: string
+                description: ""
+            lastname:
+                type: string
+                description: ""
+            dni:
+                type: number
+                format: double
+                description: ""
+            dateofbirth:
+                type: string
+                description: ""
+            phone:
+                type: string
+                description: ""
+            email:
+                type: string
+                description: ""
+            address:
+                type: string
+                description: ""
+            city:
+                type: string
+                description: ""
+            state:
+                type: number
+                format: double
+                description: ""
+            username:
+                type: string
+                description: ""
+            password:
+                type: string
+                description: ""
+        type: object
+        required:
+            - id
+            - name
+            - lastname
+            - dni
+            - dateofbirth
+            - phone
+            - email
+            - address
+            - city
+            - state
+            - username
+            - password
 info:
     description: 'Paradigm API.'
     license:
@@ -116,7 +132,7 @@ info:
     title: paradigm-api
     version: 1.0.0
 paths:
-    /api/login:
+    /api/auth/login:
         post:
             operationId: LoginPost
             produces:
@@ -128,7 +144,7 @@ paths:
                         type: string
             description: ""
             tags:
-                - 'User login'
+                - Auth
             consumes:
                 - application/json
             parameters:
@@ -139,6 +155,29 @@ paths:
                     required: true
                     schema:
                         $ref: '#/definitions/AuthUser'
+    /api/auth/register:
+        post:
+            operationId: LoginRegister
+            produces:
+                - text/html
+            responses:
+                '200':
+                    description: Ok
+                    schema:
+                        type: string
+            description: ""
+            tags:
+                - Auth
+            consumes:
+                - application/json
+            parameters:
+                -
+                    description: ""
+                    in: body
+                    name: user
+                    required: true
+                    schema:
+                        $ref: '#/definitions/User'
     /api/users:
         get:
             operationId: UserGetAll
